bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value a
  a=Math.abs(n-100)<10
  ^NearHundred:3: error: not found: value b
  b=Math.abs(n-200)<10
  ^NearHundred:4: error: not found: value a
  if ((a==true) || (b==true)){
       ^NearHundred:4: error: not found: value b
  if ((a==true) || (b==true)){
                    ^NearHundred:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((a==true) || (b==true)){
  ^