bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  a=Math.abs(n-100)<10
  b=Math.abs(n-200)<10
  if ((a==true) || (b==true)){
    return true
  }
}